fix: scrollbar

--- a/front/revit/src/app/pages/revit/page.css
+++ b/front/revit/src/app/pages/revit/page.css
@@ -32,9 +32,5 @@ body {
     padding: 45px;
     border-radius: 35px;
     overflow: scroll;
-    scroll-padding: 45px;
-}
-
-::-webkit-scrollbar{
-    transform: translateX(-40px);
+    scrollbar-width: none;
 }
